# easy_terminal

./: .gitignore  AGENTS.md  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
demo/: disk-console.html  disk-dashboard.html  disk-scanner.html  disk-treemap.html
demo/console/: console.css  (+1 more)
scripts/: prepare-openvpn.sh
src/: App.css  App.ts  App.vue  canvas.ts  command-config.ts  command-intelligence.ts  command-intercept.ts  command-market.ts  command-suggest.ts  desktop-draw.ts  detached-terminal.ts  file-editor.ts  file-preview.ts  file-tree.ts  global-shortcut.ts  history-panel.ts  i18n.ts  main.ts  mapping-panel.ts  mode-bootstrap.ts  placeholder.ts  settings.ts  shell-parse.ts  shortcut-manager.ts  shortcut-panel.ts  sidebar.ts  ssh-panel.ts  styles.css  terminal-manager.ts  terminal-window.ts  types.ts
src-tauri/: Cargo.toml  build.rs  merge_commands.cjs  merge_commands.py  tauri.conf.json
src-tauri/binaries/: openvpn-aarch64-apple-darwin  openvpn-x86_64-apple-darwin  openvpn-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/commands/: darwin.json  linux.json  windows.json
src-tauri/commands/custom/: ai-ml.json  conda.json  devops.json  docker.json  git.json  java.json  kubectl.json  npm.json  pnpm.json  python.json  rust.json  systemctl.json  uv.json  yarn.json
src-tauri/commands/system/: arch.json  darwin.json  linux.json  ubuntu.json  windows.json
src-tauri/src/: commands.rs  content_search.rs  db.rs  disks.rs  file_index.rs  fs.rs  lib.rs  main.rs  path_util.rs  performance.rs  pty.rs  settings.rs  shell_setup.rs  ssh.rs  vpn.rs
(+170 files in other folders)
