[package]
name = "easy_terminal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "easy_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
shellexpand = "3"
tauri-plugin-mcp-bridge = "0.10"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
ssh2 = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
# SQLite FTS5 全文搜索（bundled 编译，需启用 feature）
# 通过 rusqlite 的 "bundled" 自带 SQLite，FTS5 默认编译包含在较新的 SQLite 版本中
jwalk = "0.8"
notify = { version = "6", features = ["serde"] }
trash = "5"
sysinfo = "0.32"

[profile.dev]
# Keep local debugging usable, but avoid huge symbol files in repeated tauri dev rebuilds.
debug = 1

[profile.dev.package."*"]
# Dependency debug info dominates target/debug size and is rarely needed in day-to-day UI work.
debug = 0

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"
